[workspace]
resolver = "2"
members = ["lib", "file", "symbolic", "info"]

[workspace.package]
version = "0.1.0"
authors = ["Artem Egorkine <arteme@gmail.com>"]
edition = "2021"
rust-version = "1.70"

license = "MIT"
repository = "https://github.com/arteme/l6t-rs"
homepage = "https://github.com/arteme/l6t-rs"
