[package]
name = "l6t-info"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
once_cell = "1.18.0"

l6t = { path = "../lib" }
