[package]
name = "l6t-viewer"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

anyhow = "1.0.95"
itertools = "0.14.0"
gtk4 = { version = "0.9.5", features = ["v4_16"] }
webkit6 = "0.4.0"
minijinja = "2.5.0"
l6t = { version = "0", path = "../lib", features = ["serde"]  }
log = { version = "0.4.22", features = [] }
serde = { workspace = true }


[build-dependencies]

anyhow = "1.0.95"
glib-build-tools = "0.20.0"